# HeliosAI

./: Dockerfile  MASTER_DOCUMENTATION_PLAN.md  Makefile  README.md  app.py  conftest.py  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  scaffold.py
data/: helios_simulated.csv  solexs_simulated.csv
docs/: 01_Project_Vision.md  (+82 more)
services/intelligence/: pyproject.toml
services/intelligence/src/intelligence/: explainability.py  forecasting.py  mlflow_setup.py  nowcasting.py  predictor.py
services/intelligence/src/intelligence/catalogue/: core.py  interface.py
services/intelligence/src/intelligence/catalogue_builder/: interface.py
services/intelligence/src/intelligence/detector/: core.py  interface.py
services/intelligence/src/intelligence/explainability/: core.py  interface.py
services/intelligence/src/intelligence/flare_classifier/: interface.py
services/intelligence/src/intelligence/forecast_deep_models/: interface.py  lstm_model.py
services/intelligence/src/intelligence/forecasting/: core.py  explainability.py  features.py  interface.py
services/intelligence/src/intelligence/fusion_gate/: core.py  interface.py
services/intelligence/src/intelligence/lead_time_reconciler/: interface.py
services/intelligence/src/intelligence/mlops/: drift_monitor.py  registry.py
services/intelligence/src/intelligence/nowcast_fusion_engine/: interface.py
services/intelligence/src/intelligence/nowcast_solexs_detector/: interface.py
services/intelligence/src/intelligence/training/: baseline_model.py  deep_model.py  transformer_model.py
(+116 files in other folders)
