[project]
name = "heliosai-intelligence"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.4.0,<2.5.0",
    "pytorch-lightning>=2.4.0,<2.5.0",
    "scikit-learn>=1.5.0,<1.6.0",
    "xgboost>=2.1.0,<2.2.0",
    "lightgbm>=4.5.0,<4.6.0",
    "catboost>=1.2.0,<1.3.0",
    "shap>=0.46.0,<0.47.0",
    "captum>=0.7.0,<0.8.0",
    "mlflow>=2.16.0,<2.17.0",
    "celery>=5.4.0,<5.5.0",
    "structlog",
    "heliosai-shared"
]
